--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -11,7 +11,7 @@
   <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/assistance">{{
     'ASSISTANCE.TITLE' | translate }}</a>
   <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/questionnaire">{{
-    'QUESTIONNAIRES.TITLE' | translate }}</a>
+    'QUESTIONNAIRE.TITLE' | translate }}</a>
   <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/pointsbadges">{{
     'POINTSBADGES.TITLE' | translate }}</a>
   <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/collections">{{
