--- a/src/app/pages/gamesResult/gamesResult.html
+++ b/src/app/pages/gamesResult/gamesResult.html
@@ -1,33 +1,34 @@
 <mat-form-field style="width:400px !important;margin:20px;">
-  <mat-select style="width:400px !important" placeholder="¿Selecciona un cuestionario?">
-    <mat-option *ngFor="let quest of questionnaireGame" (click)="seleccionarcuestionario(quest.name)"
+  <mat-select style="width:400px !important" placeholder="{{'GAMES.SELECTQUESTIONNAIRE'|translate}}">
+    <mat-option *ngFor="let quest of questionnairesGame" (click)="selectQuestionnaire(quest.name)"
       value="{{quest.name}}">{{quest.name}}
     </mat-option>
   </mat-select>
 </mat-form-field>
-<div class="groups-content" *ngIf="selectedQuestionnaire.length>=1">
+<div class="groups-content" *ngIf="selectQuestionnaires.length>=1">
   <table>
     <tr width="35">
-      <th>Id estudiante</th>
-      <th>Nota final</th>
-      <th>Respuestas acertadas</th>
-      <th>Respuestas falladas</th>
-      <th>Respuesta usuario</th>
+      <th>{{'GAMES.TABLEIDSTUDENT'|translate}}</th>
+      <th>{{'GAMES.TABLEFINALMARK'|translate}}</th>
+      <th>{{'GAMES.TABLEANSWERSCORRECT'|translate}}</th>
+      <th>{{'GAMES.TABLEANSWERSNOCORRECT'|translate}}</th>
+      <th>{{'GAMES.TABLEUSERANSWERS'|translate}}</th>
     </tr>
-    <tr *ngFor="let result of selectedQuestionnaire">
+    <tr *ngFor="let result of selectQuestionnaires">
       <td>{{result.studentId}}</td>
       <td>{{result.finalNote}}</td>
       <td>{{result.numAnswerCorrect}} </td>
       <td>{{result.numAnswerNoCorrect}}</td>
       <td>
         <div *ngFor="let answer of result.userAnswers;let i =index">
-          <p *ngIf="answer !==null">Respuesta pregunta {{i+1}} : {{answer}}</p>
-          <p *ngIf="answer ===null">Respuesta pregunta {{i+1}} : SIN RESPUESTAS</p>
+          <p *ngIf="answer !==null">{{'GAMES.TABLEANSWERQUESTION'|translate}} {{i+1}} : {{answer}}</p>
+          <p *ngIf="answer ===null">{{'GAMES.TABLEANSWERQUESTION'|translate}} {{i+1}} :
+            {{'GAMES.TABLENOANSWER'|translate}}</p>
         </div>
       </td>
     </tr>
   </table>
 </div>
-<div class=" groups-content" *ngIf="selectedQuestionnaire.length<1 || !selectedQuestionnaire ===undefined ">
-  SIN RESULTADOS
+<div class=" groups-content" *ngIf="selectQuestionnaires.length<1 || !selectQuestionnaires ===undefined ">
+  {{'GAMES.TABLENORESULTS'|translate}}
 </div>
