--- a/src/app/pages/questionnaire/viewQuestionnairesDialog.html
+++ b/src/app/pages/questionnaire/viewQuestionnairesDialog.html
@@ -1,7 +1,7 @@
 <mat-dialog-content>
   <mat-accordion class="example-headers-align">
     <mat-expansion-panel *ngFor="let Questionnaire of data.questionnaireshtml" hideToggle>
-      <mat-expansion-panel-header (click)="getInformation(Questionnaire.id)">
+      <mat-expansion-panel-header (click)="getQuestionsofQuestionnaire(Questionnaire.id)">
         <mat-panel-title>
           {{Questionnaire.name}}
         </mat-panel-title>
@@ -12,10 +12,10 @@
       <div mat-dialog>
         <table>
           <tr width="35">
-            <th>Imagen</th>
-            <th>Id</th>
-            <th>Categoria</th>
-            <th>Enunciado</th>
+            <th>{{'QUESTIONNAIRE.TABLEIMAGE'|translate}}</th>
+            <th>{{'QUESTIONNAIRE.TABLEID'|translate}}</th>
+            <th>{{'QUESTIONNAIRE.TABLECATEGORY'|translate}}</th>
+            <th>{{'QUESTIONNAIRE.TABLESTATEMENT'|translate}}</th>
           </tr>
           <tr *ngFor="let quest of Questions">
             <td><img src="{{quest.image}}" width="50" height="50"></td>
