--- a/src/app/pages/questionnaire/viewQuestionsDialogComponent.html
+++ b/src/app/pages/questionnaire/viewQuestionsDialogComponent.html
@@ -3,19 +3,19 @@
     <mat-expansion-panel *ngFor="let quest of data.questionshtml" hideToggle>
       <mat-expansion-panel-header>
         <mat-panel-title *ngIf="quest.category">
-          Categoria: {{quest.category}}
+          {{'QUESTION.TABLECATEGORY'|translate}} {{quest.category}}
         </mat-panel-title>
         <mat-panel-description *ngIf="quest.statement">
-          Descripcion: {{quest.statement}}
+          {{'QUESTION.TABLESTATEMENT'|translate}} {{quest.statement}}
         </mat-panel-description>
       </mat-expansion-panel-header>
       <table>
         <tr width="35">
-          <th>Imagen</th>
-          <th>Dificultad</th>
-          <th>Tipo de pregunta</th>
-          <th>Respuesta Correcta</th>
-          <th>Respuestas</th>
+          <th> {{'QUESTION.TABLEIMAGE'|translate}}</th>
+          <th> {{'QUESTION.TABLEDIFFICULTY'|translate}}</th>
+          <th> {{'QUESTION.TABLETYPEOFQUESTION'|translate}}</th>
+          <th> {{'QUESTION.TABLECORRECTANSWER'|translate}}</th>
+          <th> {{'QUESTION.TABLEANSWER'|translate}}</th>
         </tr>
         <tr>
           <td><img src="{{quest.image}}" width="50" height="50"></td>
